prusti-tests/tests/runtime_checks/fail/predicates/nested-predicate.stderr
  __          __        __  ___             
 |__)  _\/_  |__) |  | /__`  |   ____\/_  | 
 |      /\   |  \ \__/ .__/  |       /\   | 

Prusti version: 0.2.2, commit 5c05f2e639b 2023-09-13 13:08:47 UTC, built on 2023-09-18 08:28:38 UTC
error: [Prusti: invalid specification] Referring to predicate that is not runtime checkable in specifications that should be runtime checked is not allowed
  --> $DIR/nested-predicate.rs:8:10
   |
8  |         !even(x)
   |          ^^^^
   |
note: this predicate can not be checked at runtime, make sure it has a body and mark it with #[insert_runtime_check]
  --> $DIR/nested-predicate.rs:14:5
   |
14 | /     fn even(x: i32) -> bool {
15 | |         x % 2 == 0
16 | |     }
   | |_____^

error: aborting due to previous error

